--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "scripts": {
-    "compile": ".\\node_modules\\.bin\\tsc",
-    "postcompile": "node ./src/prepend.js"
-  },
-  "dependencies": {
-    "@types/youtube": "^0.0.50",
-    "@violentmonkey/types": "^0.1.7"
-  },
+  "name": "4chan-x-yt-playlist",
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/youtube": "^0.0.50",
+    "@violentmonkey/types": "^0.1.7",
+    "rollup": "^4.17.2",
+    "rollup-plugin-userscript-metablock": "^0.3.3",
+    "tslib": "^2.6.2",
     "typescript": "^5.4.5"
-  }
+  },
+  "type": "module",
+  "scripts": {
+    "build": "npx rollup -c"
+  },
+  "license": "ISC"
 }
