--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,23 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    // "lib": [],
-    "module": "commonjs",
-    "rootDir": "./src",
-    "outDir": "./",
+    "module": "ES2020",
+    "types": [
+      "@violentmonkey/types", "youtube"
+    ],
     "removeComments": true,
-    "noEmitOnError": true,
+    "noEmit": true,
+    "moduleResolution": "node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
-    // "noUnusedLocals": true,
+    "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noImplicitReturns": true,
-    "skipLibCheck": true,
-    "typeRoots": [ "./node_modules/@types", "./node_modules/@violentmonkey" ]
+    "skipLibCheck": true
   },
-  "exclude": [ "./*.js" ]
+  "exclude": [
+    "node_modules",
+    "build/"
+  ]
 }
